// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests for StandardCard component renders StandardCard with title and help button 1`] = `
<Card
  className="layout-card"
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
>
  <CardHeader
    avatar={null}
    className="card-header"
  >
    <div
      className="columns is-gapless is-mobile"
    >
      <div
        className="column"
      >
        <h2
          className="title is-4"
        >
          card title
        </h2>
      </div>
      <div
        className="column is-narrow is-helpicon"
      >
        <Connect(HelpIcon)
          buttonLabel="OK"
          text="help text"
          title="help"
        />
      </div>
    </div>
  </CardHeader>
  <CardText
    className="body-1"
  >
    <div />
  </CardText>
</Card>
`;

exports[`Snapshot tests for StandardCard component renders StandardCard with title and no help icon 1`] = `
<Card
  className="layout-card"
  expandable={false}
  expanded={null}
  initiallyExpanded={false}
>
  <CardHeader
    avatar={null}
    className="card-header"
  >
    <div
      className="columns is-gapless is-mobile"
    >
      <div
        className="column"
      >
        <h2
          className="title is-4"
        >
          card title
        </h2>
      </div>
    </div>
  </CardHeader>
  <CardText
    className="body-1"
  >
    <div />
  </CardText>
</Card>
`;
